package com.novaperutech.veyra.platform.hcm.domain.model.commands;

public record DeleteStaffCommand(Long id) {
}
