package com.novaperutech.veyra.platform.hcm.domain.model.queries;

public record GetStaffByIdQuery(Long id) {
}
