package com.novaperutech.veyra.platform.hcm.domain.model.valueobjects;

public enum WorkShift {
    DAY, NIGHT, DAWN
}
