package com.novaperutech.veyra.platform.hcm.interfaces.rest.resources;

public record UpdateContractResource(String newStatus) {
}
